--- a/.drone.yml
+++ b/.drone.yml
@@ -34,7 +34,7 @@ pipeline:
     group_id: org.dcs
     artifact_id: org.dcs.commons
     version: 0.5.0-SNAPSHOT
-    pom: target/*.pom
+    pom: target/org.dcs.commons-0.5.0-SNAPSHOT.pom
     files:
       - target/*.jar
     force_upload: true
