--- a/.drone.yml
+++ b/.drone.yml
@@ -16,7 +16,7 @@ pipeline:
     image: bigtruedata/sbt:0.13.15-2.11.8
     commands:
       - mkdir -p ~/.sbt/0.13
-      - cp global.sbt ~/.sbt/0.13
+      - cp global.sbt ~/.sbt/0.13/
       - sbt -Dsbt.ivy.home=./.ivy2 clean test publishM2
     secrets: [ artifactory_host, artifactory_url, artifactory_username, artifactory_password ]
   rebuild-cache:
